--- a/Express/chat-demo/client/index.html
+++ b/Express/chat-demo/client/index.html
@@ -17,6 +17,9 @@
     <p>
       <button type="button" onclick="sendMessage()">Send</button>
     </p>
+    <h3>Search</h3>
+    <input id="keywords" type="text" placeholder="Keywords..." />
+    <button type="button" onclick="search()">Search</button>
 
     <ul id="messages"></ul>
 
